# egui_logger

./: Cargo.toml
src/: lib.rs  ui.rs
