[package]
name = "egui_logger"
version = "0.4.4"
edition = "2021"
authors = ["Jacob <RegenJacob@gmx.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RegenJacob/egui_logger"
description = "log implementation for egui"
categories = ["gui", "game-development", "development-tools::debugging"]
include = ["src/*.rs", "Cargo.toml", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
egui = { git = "https://github.com/vadixidav/egui.git", branch = "allow-external" }
regex = "1.10"
env_logger = { git = "https://github.com/vadixidav/env_logger.git", rev = "7df04b379f4618ff3e0a4298a6102cf59ac7fdd8" }

[dev-dependencies]
eframe = { git = "https://github.com/vadixidav/egui.git", branch = "allow-external" }
multi_log = "0.1"
